2025-06-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.0 released

2025-06-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (project-mode-line-format, project-mode-line): Declare.
	(tramp-test48-session-timeout): New test.
	(tramp-test49-auto-load, tramp-test49-delay-load)
	(tramp-test49-recursive-load, tramp-test49-remote-load-path)
	(tramp-test50-without-remote-files, tramp-test51-unload): Rename.

2025-05-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-enabled): Make it more robust.
	(tramp-test18-file-attributes)
	(tramp-test26-interactive-file-name-completion)
	(tramp-test26-file-name-completion-boundaries)
	(tramp-test35-remote-path): Adapt tests.

2025-05-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test26-interactive-file-name-completion):
	Simplify.
	(tramp--test-putty-p): Fix docstring.
	(tramp--test-scp-p): New defun.
	(tramp-test42-utf8): Use it.

2025-05-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test26-interactive-file-name-completion):
	Adapt test.

2025-05-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test29-start-file-process)
	(tramp-test30-make-process): Adapt tests.

2025-05-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-split-on-boundary)
	(tramp-test26-file-name-completion-boundaries): Rename.  Move up.
	(tramp--test-emacs31-p): Move up.

2025-05-02  Spencer Baugh  <sbaugh@janestreet.com>

	Previously, we assumed (roughly) that substitute-in-file-name
	always returns a suffix of the original string.  But
	substitute-in-file-name on "/ssh:user@host:/~/" returns
	"/ssh:user@host:~/", preserving the TRAMP magic prefix.  Weaken
	the assertion in completion--sifn-boundaries to allow this; the
	new assertion is more clear about the property we care about,
	anyway.

	* tramp-tests.el (tramp--test-emacs31-p, tramp--split-on-boundary)